<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    tools:context="sjsu.aparajitamitra.th_sensor_driver_using_asynctask.MainActivity"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <EditText
        android:id="@+id/etCount"
        android:layout_width="142dp"
        android:layout_height="30dp"
        android:layout_marginEnd="52dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="9dp"
        android:background="@android:color/background_light"
        android:ems="10"
        android:inputType="number"
        android:text="@string/enter_count"
        android:textAlignment="center"
        android:textAppearance="@android:style/TextAppearance.Material.Small"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintLeft_toRightOf="@+id/textView"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etActivity"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <EditText
        android:id="@+id/etActivity"
        android:editable="false" android:focusable="false"
        android:layout_width="140dp"
        android:layout_height="30dp"
        android:layout_marginTop="9dp"
        android:background="@android:color/background_light"
        android:ems="10"
        android:inputType="none"
        android:text="@string/enter_activity"
        android:textAlignment="center"
        android:textAppearance="@android:style/TextAppearance.Material.Small"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/etCount"
        app:layout_constraintRight_toRightOf="@+id/etCount"
        app:layout_constraintTop_toBottomOf="@+id/etHumidity"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1"
        tools:layout_editor_absoluteY="147dp" />

    <EditText
        android:id="@+id/etHumidity"
        android:editable="false" android:focusable="false"
        android:layout_width="140dp"
        android:layout_height="30dp"
        android:layout_marginTop="6dp"
        android:background="@android:color/background_light"
        android:ems="10"
        android:inputType="none"
        android:text="@string/enter_humidity"
        android:textAlignment="center"
        android:textAppearance="@android:style/TextAppearance.Material.Small"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/etActivity"
        app:layout_constraintRight_toRightOf="@+id/etActivity"
        app:layout_constraintTop_toBottomOf="@+id/etTemp"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/th_sensor_driver"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        android:id="@+id/textView7"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="7dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="122dp"
        android:layout_height="37dp"
        android:layout_marginStart="16dp"
        android:text="@string/number_of_sensor_readings"
        android:textColor="@android:color/white"
        android:textSize="12sp"
        android:textStyle="bold"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/btnGenerate"
        android:layout_marginTop="26dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintTop_toTopOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.205" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginStart="16dp"
        android:text="@string/activity"
        android:textColor="@android:color/white"
        android:textSize="12sp"
        android:textStyle="bold"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="@+id/etActivity"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/etActivity"
        android:layout_marginLeft="16dp"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:layout_marginStart="16dp"
        android:text="@string/humidity"
        android:textColor="@android:color/white"
        android:textSize="12sp"
        android:textStyle="bold"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="@+id/etHumidity"
        android:layout_marginEnd="21dp"
        app:layout_constraintRight_toRightOf="@+id/textView2"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/etHumidity"
        app:layout_constraintHorizontal_bias="0.432"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="203dp"
        android:layout_marginStart="16dp"
        android:text="@string/output"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginLeft="16dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="80dp"
        android:layout_height="23dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/temperature"
        android:textColor="@android:color/white"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/etTemp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/etTemp"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1" />

    <EditText
        android:id="@+id/etTemp"
        android:editable="false"
        android:focusable="false"
        android:layout_width="140dp"
        android:layout_height="30dp"
        android:layout_marginTop="17dp"
        android:background="@android:color/background_light"
        android:ems="10"
        android:inputType="none"
        android:text="@string/enter_temp"
        android:textAlignment="center"
        android:textAppearance="@android:style/TextAppearance.Material.Small"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/etHumidity"
        app:layout_constraintRight_toRightOf="@+id/etHumidity"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1"
        tools:layout_editor_absoluteY="55dp" />

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="93dp"
        android:layout_height="48dp"
        android:layout_marginEnd="64dp"
        android:layout_marginStart="63dp"
        android:background="@android:color/holo_red_light"
        android:text="@string/cancel"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/tvOutput"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toRightOf="@+id/btnGenerate"
        app:layout_constraintHorizontal_bias="0.519"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/tvOutput"
        android:layout_marginBottom="56dp" />

    <Button
        android:id="@+id/btnGenerate"
        android:layout_width="92dp"
        android:layout_height="48dp"
        android:layout_marginEnd="41dp"
        android:layout_marginStart="41dp"
        android:background="@android:color/holo_green_dark"
        android:text="@string/generate"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintRight_toLeftOf="@+id/etCount"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/textView3"
        android:layout_marginBottom="24dp" />

    <TextView
        android:id="@+id/tvOutput"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/darker_gray"
        android:textColor="?android:attr/colorBackground"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

</android.support.constraint.ConstraintLayout>
